// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectPermitForm renders correctly with default empty values 1`] = `
<DocumentFragment>
  <form>
    <div
      class="MuiBox-root MuiBox-root-1"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
      />
      <div
        class="MuiBox-root MuiBox-root-2"
      >
        <button
          aria-label="add permit"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Add Permit
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ProjectPermitForm renders correctly with error on the permits field due to duplicates 1`] = `
<DocumentFragment>
  <form>
    <div
      class="MuiBox-root MuiBox-root-30"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiBox-root MuiBox-root-31"
          >
            <div
              class="MuiBox-root MuiBox-root-32"
            >
              <div
                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  for="permits.[0].permit_number"
                  id="permits.[0].permit_number-label"
                >
                  Permit Number
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[0].permit_number"
                    name="permits.[0].permit_number"
                    required=""
                    type="text"
                    value="123"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-33 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-35 PrivateNotchedOutline-legendNotched-36"
                    >
                      <span>
                        Permit Number *
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-37"
            >
              <div
                class="MuiFormControl-root"
                style="width: 100%;"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  id="permit_type"
                >
                  Permit Type
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-label="Permit Type"
                    aria-labelledby="permit_type permits.[0].permit_type"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[0].permit_type"
                    role="button"
                    tabindex="0"
                  >
                    Park Use Permit
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    name="permits.[0].permit_type"
                    required=""
                    tabindex="-1"
                    value="Park Use Permit"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-33 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-35 PrivateNotchedOutline-legendNotched-36"
                    >
                      <span>
                        Permit Type
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                />
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-38"
            >
              <div
                class="MuiFormControl-root"
                style="width: 100%;"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  id="sampling_conducted"
                >
                  Sampling Conducted
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-label="sampling conducted"
                    aria-labelledby="sampling_conducted permits.[0].sampling_conducted"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[0].sampling_conducted"
                    role="button"
                    tabindex="0"
                  >
                    Yes
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    data-testid="sampling_conducted"
                    name="permits.[0].sampling_conducted"
                    required=""
                    tabindex="-1"
                    value="true"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-33 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-35 PrivateNotchedOutline-legendNotched-36"
                    >
                      <span>
                        Sampling Conducted
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                />
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-39"
            >
              <button
                aria-label="remove permit"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
                data-testid="delete-icon"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    role="presentation"
                    style="width: 1.5rem; height: 1.5rem;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiBox-root MuiBox-root-40"
          >
            <div
              class="MuiBox-root MuiBox-root-41"
            >
              <div
                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  for="permits.[1].permit_number"
                  id="permits.[1].permit_number-label"
                >
                  Permit Number
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[1].permit_number"
                    name="permits.[1].permit_number"
                    required=""
                    type="text"
                    value="123"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-33 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-35 PrivateNotchedOutline-legendNotched-36"
                    >
                      <span>
                        Permit Number *
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-42"
            >
              <div
                class="MuiFormControl-root"
                style="width: 100%;"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  id="permit_type"
                >
                  Permit Type
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-label="Permit Type"
                    aria-labelledby="permit_type permits.[1].permit_type"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[1].permit_type"
                    role="button"
                    tabindex="0"
                  >
                    Scientific Fish Collection Permit
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    name="permits.[1].permit_type"
                    required=""
                    tabindex="-1"
                    value="Scientific Fish Collection Permit"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-33 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-35 PrivateNotchedOutline-legendNotched-36"
                    >
                      <span>
                        Permit Type
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                />
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-43"
            >
              <div
                class="MuiFormControl-root"
                style="width: 100%;"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  id="sampling_conducted"
                >
                  Sampling Conducted
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-label="sampling conducted"
                    aria-labelledby="sampling_conducted permits.[1].sampling_conducted"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[1].sampling_conducted"
                    role="button"
                    tabindex="0"
                  >
                    Yes
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    data-testid="sampling_conducted"
                    name="permits.[1].sampling_conducted"
                    required=""
                    tabindex="-1"
                    value="true"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-33 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-35 PrivateNotchedOutline-legendNotched-36"
                    >
                      <span>
                        Sampling Conducted
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                />
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-44"
            >
              <button
                aria-label="remove permit"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
                data-testid="delete-icon"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    role="presentation"
                    style="width: 1.5rem; height: 1.5rem;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-45"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
          style="font-size: 12px; color: rgb(244, 67, 54);"
        >
          Error is here
        </p>
      </div>
      <div
        class="MuiBox-root MuiBox-root-46"
      >
        <button
          aria-label="add permit"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Add Permit
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ProjectPermitForm renders correctly with errors on the permit_number, permit_type and sampling_conducted fields 1`] = `
<DocumentFragment>
  <form>
    <div
      class="MuiBox-root MuiBox-root-19"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiBox-root MuiBox-root-20"
          >
            <div
              class="MuiBox-root MuiBox-root-21"
            >
              <div
                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined Mui-error Mui-error MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  for="permits.[0].permit_number"
                  id="permits.[0].permit_number-label"
                >
                  Permit Number
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error Mui-error"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-describedby="permits.[0].permit_number-helper-text"
                    aria-invalid="true"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[0].permit_number"
                    name="permits.[0].permit_number"
                    required=""
                    type="text"
                    value="123"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-22 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-24 PrivateNotchedOutline-legendNotched-25"
                    >
                      <span>
                        Permit Number *
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained Mui-error MuiFormHelperText-filled Mui-required"
                  id="permits.[0].permit_number-helper-text"
                >
                  Error here
                </p>
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-26"
            >
              <div
                class="MuiFormControl-root"
                style="width: 100%;"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  id="permit_type"
                >
                  Permit Type
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-label="Permit Type"
                    aria-labelledby="permit_type permits.[0].permit_type"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[0].permit_type"
                    role="button"
                    tabindex="0"
                  >
                    Scientific Fish Collection Permit
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    name="permits.[0].permit_type"
                    required=""
                    tabindex="-1"
                    value="Scientific Fish Collection Permit"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-22 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-24 PrivateNotchedOutline-legendNotched-25"
                    >
                      <span>
                        Permit Type
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                >
                  Error here as well
                </p>
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-27"
            >
              <div
                class="MuiFormControl-root"
                style="width: 100%;"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  id="sampling_conducted"
                >
                  Sampling Conducted
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root Mui-error Mui-error MuiInputBase-formControl"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-label="sampling conducted"
                    aria-labelledby="sampling_conducted permits.[0].sampling_conducted"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[0].sampling_conducted"
                    role="button"
                    tabindex="0"
                  >
                    Yes
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    data-testid="sampling_conducted"
                    name="permits.[0].sampling_conducted"
                    required=""
                    tabindex="-1"
                    value="true"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-22 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-24 PrivateNotchedOutline-legendNotched-25"
                    >
                      <span>
                        Sampling Conducted
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                >
                  Error here too
                </p>
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-28"
            >
              <button
                aria-label="remove permit"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
                data-testid="delete-icon"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    role="presentation"
                    style="width: 1.5rem; height: 1.5rem;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-29"
      >
        <button
          aria-label="add permit"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Add Permit
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`ProjectPermitForm renders correctly with existing permit values 1`] = `
<DocumentFragment>
  <form>
    <div
      class="MuiBox-root MuiBox-root-3"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiBox-root MuiBox-root-4"
          >
            <div
              class="MuiBox-root MuiBox-root-5"
            >
              <div
                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  for="permits.[0].permit_number"
                  id="permits.[0].permit_number-label"
                >
                  Permit Number
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[0].permit_number"
                    name="permits.[0].permit_number"
                    required=""
                    type="text"
                    value="123"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-6 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-8 PrivateNotchedOutline-legendNotched-9"
                    >
                      <span>
                        Permit Number *
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-10"
            >
              <div
                class="MuiFormControl-root"
                style="width: 100%;"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  id="permit_type"
                >
                  Permit Type
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-label="Permit Type"
                    aria-labelledby="permit_type permits.[0].permit_type"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[0].permit_type"
                    role="button"
                    tabindex="0"
                  >
                    Park Use Permit
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    name="permits.[0].permit_type"
                    required=""
                    tabindex="-1"
                    value="Park Use Permit"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-6 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-8 PrivateNotchedOutline-legendNotched-9"
                    >
                      <span>
                        Permit Type
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                />
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-11"
            >
              <div
                class="MuiFormControl-root"
                style="width: 100%;"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  id="sampling_conducted"
                >
                  Sampling Conducted
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-label="sampling conducted"
                    aria-labelledby="sampling_conducted permits.[0].sampling_conducted"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[0].sampling_conducted"
                    role="button"
                    tabindex="0"
                  >
                    Yes
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    data-testid="sampling_conducted"
                    name="permits.[0].sampling_conducted"
                    required=""
                    tabindex="-1"
                    value="true"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-6 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-8 PrivateNotchedOutline-legendNotched-9"
                    >
                      <span>
                        Sampling Conducted
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                />
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-12"
            >
              <button
                aria-label="remove permit"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
                data-testid="delete-icon"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    role="presentation"
                    style="width: 1.5rem; height: 1.5rem;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiBox-root MuiBox-root-13"
          >
            <div
              class="MuiBox-root MuiBox-root-14"
            >
              <div
                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  for="permits.[1].permit_number"
                  id="permits.[1].permit_number-label"
                >
                  Permit Number
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                >
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[1].permit_number"
                    name="permits.[1].permit_number"
                    required=""
                    type="text"
                    value="3213123123"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-6 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-8 PrivateNotchedOutline-legendNotched-9"
                    >
                      <span>
                        Permit Number *
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-15"
            >
              <div
                class="MuiFormControl-root"
                style="width: 100%;"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  id="permit_type"
                >
                  Permit Type
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-label="Permit Type"
                    aria-labelledby="permit_type permits.[1].permit_type"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[1].permit_type"
                    role="button"
                    tabindex="0"
                  >
                    Scientific Fish Collection Permit
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    name="permits.[1].permit_type"
                    required=""
                    tabindex="-1"
                    value="Scientific Fish Collection Permit"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-6 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-8 PrivateNotchedOutline-legendNotched-9"
                    >
                      <span>
                        Permit Type
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                />
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-16"
            >
              <div
                class="MuiFormControl-root"
                style="width: 100%;"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled Mui-required Mui-required"
                  data-shrink="true"
                  id="sampling_conducted"
                >
                  Sampling Conducted
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                  >
                     *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-label="sampling conducted"
                    aria-labelledby="sampling_conducted permits.[1].sampling_conducted"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
                    id="permits.[1].sampling_conducted"
                    role="button"
                    tabindex="0"
                  >
                    No
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    data-testid="sampling_conducted"
                    name="permits.[1].sampling_conducted"
                    required=""
                    tabindex="-1"
                    value="false"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                  <fieldset
                    aria-hidden="true"
                    class="PrivateNotchedOutline-root-6 MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="PrivateNotchedOutline-legendLabelled-8 PrivateNotchedOutline-legendNotched-9"
                    >
                      <span>
                        Sampling Conducted
                      </span>
                    </legend>
                  </fieldset>
                </div>
                <p
                  class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled Mui-required"
                />
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-17"
            >
              <button
                aria-label="remove permit"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
                data-testid="delete-icon"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    role="presentation"
                    style="width: 1.5rem; height: 1.5rem;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-18"
      >
        <button
          aria-label="add permit"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Add Permit
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
